change display to silent and demo syntax guides and add non-block select

--- a/notebooks/anachronism.ipynb
+++ b/notebooks/anachronism.ipynb
@@ -120,8 +120,7 @@
     "# execute the program\n",
     "structure_prompt(\n",
     "    examples=examples,\n",
-    "    input='The T-rex bit my dog',\n",
-    "    display=True # incrementally display the output as it is generated\n",
+    "    input='The T-rex bit my dog'\n",
     ")"
    ]
   },
