--- a/notebooks/models/llama.ipynb
+++ b/notebooks/models/llama.ipynb
@@ -43,9 +43,8 @@
    "source": [
     "import guidance\n",
     "\n",
-    "# check license before use! \"huggyllama/llama-7b\" can also be any local version of the LLaMA model\n",
-    "# (note that some other versions like decapoda-research/llama-7b-hf have tokenization bugs in them)\n",
-    "guidance.llm = guidance.llms.Transformers(\"huggyllama/llama-7b\", device=\"cpu\") # use cuda for GPU if you have >27GB of VRAM"
+    "# replace your_path with a version of the LLaMA model\n",
+    "guidance.llm = guidance.llms.Transformers(\"your_path/llama-7b\", device=\"cpu\") # use cuda for GPU if you have >27GB of VRAM"
    ]
   },
   {
@@ -154,7 +153,7 @@
     "Reasoning:{{gen \"reasoning\" stop=\"\\\\n\"}}\n",
     "Anachronism: {{#select \"answer\"}}Yes{{or}}No{{/select}}''')\n",
     "\n",
-    "out = structure_prompt(examples=examples, input='The T-rex bit my dog', display=True)"
+    "out = structure_prompt(examples=examples, input='The T-rex bit my dog')"
    ]
   },
   {
