Add MPT model support

--- a/notebooks/art_of_prompt_design/prompt_boundaries_and_token_healing.ipynb
+++ b/notebooks/art_of_prompt_design/prompt_boundaries_and_token_healing.ipynb
@@ -234,7 +234,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Not that there are **34** different tokens starting with a colon, and thus ending a prompt with a colon means the model will likely not generate completions with any of these 34 token strings. *This subtle and powerful bias can have all kinds of unintended consequences.* And this applies to **any** string that could be potentially extended to make a longer single token (not just `:`).  Even our \"fixed\" prompt ending with \"http\" has a built in bias as well, as it communicates to the model that what comes after \"http\" is likely not \"s\" (otherwise \"http\" would not have been encoded as a separate token):"
+    "Note that there are **34** different tokens starting with a colon, and thus ending a prompt with a colon means the model will likely not generate completions with any of these 34 token strings. *This subtle and powerful bias can have all kinds of unintended consequences.* And this applies to **any** string that could be potentially extended to make a longer single token (not just `:`).  Even our \"fixed\" prompt ending with \"http\" has a built in bias as well, as it communicates to the model that what comes after \"http\" is likely not \"s\" (otherwise \"http\" would not have been encoded as a separate token):"
    ]
   },
   {
@@ -281,7 +281,7 @@
     }
    ],
    "source": [
-    "# Accidentaly adding a space, will lead to weird generation\n",
+    "# Accidentally adding a space, will lead to weird generation\n",
     "program = guidance('''I read a book about {{gen max_tokens=5 token_healing=False temperature=0}}''')\n",
     "program()"
    ]
@@ -523,7 +523,7 @@
    ],
    "source": [
     "\n",
-    "# Accidentaly adding a space will not impact generation\n",
+    "# Accidentally adding a space will not impact generation\n",
     "program = guidance('''I read a book about {{gen max_tokens=5 temperature=0}}''')\n",
     "program()"
    ]
@@ -595,7 +595,7 @@
    "source": [
     "## Conclusion\n",
     "\n",
-    "When you write prompts, remember that greedy tokenization can have a significant impact on how language models interpret your prompts, particularly when the prompt ends with a token that could be extended into a longer token. This easy-to-miss source of bias can impact your results in suprising and unintended ways.\n",
+    "When you write prompts, remember that greedy tokenization can have a significant impact on how language models interpret your prompts, particularly when the prompt ends with a token that could be extended into a longer token. This easy-to-miss source of bias can impact your results in surprising and unintended ways.\n",
     "\n",
     "To address to this, either end your prompt with a non-extendable token, or use something like `guidance`'s \"token healing\" feature so you can to express your prompts however you wish, without worrying about token boundary artifacts. "
    ]
