changes to blog

--- a/notebooks/chatgpt_vs_open_source_on_harder_tasks.ipynb
+++ b/notebooks/chatgpt_vs_open_source_on_harder_tasks.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -13,13 +14,13 @@
    "metadata": {},
    "source": [
     "## Introduction\n",
-    "In an exciting turn of events, open-source LLMs like [Vicuna](https://lmsys.org/blog/2023-03-30-vicuna/) and [MPT](https://www.mosaicml.com/blog/mpt-7b#building-with-mosaicml-platform) are popping up all over the place.  \n",
+    "Open-source LLMs like [Vicuna](https://lmsys.org/blog/2023-03-30-vicuna/) and [MPT](https://www.mosaicml.com/blog/mpt-7b#building-with-mosaicml-platform) are popping up all over the place.  \n",
     "There's been [discussion](https://www.mosaicml.com/blog/mpt-7b#building-with-mosaicml-platform) about how these models compare to commercial LLMs like ChatGPT or Bard, but most of the comparison has been around answers to simple questions.  \n",
     "\n",
-    "As an example, the folks at [LMSYSOrg](https://lmsys.org/) did [an interesting analysis](https://lmsys.org/blog/2023-03-30-vicuna/) (+1 for being automated and reproducible) comparing Vicuna-13B to ChatGPT on various short questions, which is great as a comparison of the models as simple chatbots. However, the more interesting ways of using these LLMs typically require complex instructions and/or multi-turn conversations, and some prompt engineering.\n",
+    "As an example, the folks at [LMSYSOrg](https://lmsys.org/) did [an interesting analysis](https://lmsys.org/blog/2023-03-30-vicuna/) (+1 for being automated and reproducible) comparing Vicuna-13B to ChatGPT on various short questions, which is great as a comparison of the models as simple chatbots. However, many interesting ways of using these LLMs typically require complex instructions and/or multi-turn conversations, and some prompt engineering.\n",
     "We think that in the 'real world', most people will want to compare different LLM offerings on _their_ problem, with a variety of different prompts.  \n",
     "\n",
-    "This blog post is an example of what such an exploration might look like (we use [`guidance`](https://github.com/microsoft/guidance) throughout), comparing couple of open source models (Vicuna-13B, MPT-7b-Chat) with ChatGPT on tasks of varying complexity."
+    "This blog post is an example of what such an exploration might look like, comparing two open source models (Vicuna-13B, MPT-7b-Chat) with ChatGPT on tasks of varying complexity."
    ]
   },
   {
@@ -27,7 +28,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Warmup: toy task, solving equations\n",
+    "## Warmup: Solving equations\n",
     "By way of warmup, let's start with a toy task (solving simple polynomial equations), where we can check the output for correctness and shouldn't need much prompt engineering.  \n",
     "This will be similar to the Math category in [here](https://lmsys.org/blog/2023-03-30-vicuna/), with the difference that we will evaluate models as correct / incorrect on ground truth, rather than using GPT-4 to rate the output."
    ]
@@ -37,7 +38,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here is a simple function that generates a polynomial function with distinct integer roots.\n",
+    "Here is a simple function that generates a polynomial with distinct integer roots.\n",
     "This will give us both the input and the ground truth output."
    ]
   },
@@ -89,10 +90,11 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "First, let's load the models:"
+    "First, let's load the models (we use [`guidance`](https://github.com/microsoft/guidance) throughout for easy comparison and control):"
    ]
   },
   {
@@ -153,13 +155,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Quick digression on different syntaxes**: each of these models have a their own _chat syntax_, e.g. here is how the same conversation would look like in Vicuna and MPT:  \n",
+    "**Quick digression on different syntaxes**: each of these models have a their own _chat syntax_, e.g. here is how the same conversation would look like in Vicuna and MPT (where `[generated response]` is where the model would put its output):  \n",
     "\n",
     "Vicuna:  \n",
     "```\n",
     "A chat between a curious user and an artificial intelligence assistant. The assistant gives helpful, detailed, and polite answers to the user's questions.  \n",
     "USER: Can you please solve the following equation? x^2 + 2x + 1 = 0  \n",
-    "ASSISTANT: (generated response) </s>\n",
+    "ASSISTANT: [generated response] </s>\n",
     "```\n",
     "\n",
     "MPT:  \n",
@@ -171,10 +173,10 @@
     "- You are more than just an information source, you are also able to write poetry, short stories, and make jokes.\"\"\"\n",
     "<|im_end|>\n",
     "<|im_start|>user Can you please solve the following equation? x^2 + 2x + 1 = 0<|im_end|>\n",
-    "<|im_start|>assistant (generated response)<|im_end>\n",
+    "<|im_start|>assistant [generated response]<|im_end>\n",
     "```\n",
     "\n",
-    "To avoid the tediousness translating between these, `guidance` supports a unified chat syntax that gets translated to the model-specific syntax.  \n",
+    "To avoid the tediousness translating between these, `guidance` supports a unified chat syntax that gets translated to the model-specific syntax when calling the model.  \n",
     "Here is the prompt we'll use for all models (note how we use ``{{system}}``, ``{{user}}`` and ``{{assistant}}`` tags rather than model-specific separators):"
    ]
   },
@@ -184,9 +186,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "find_roots = guidance('''{{#system~}}\n",
+    "find_roots = guidance('''\n",
+    "{{#system~}}\n",
     "{{system_prompt}}\n",
     "{{~/system}}\n",
+    "\n",
     "{{#user~}}\n",
     "Please find the roots of the following equation: {{equation}}\n",
     "Think step by step, find the roots, and then say:\n",
@@ -194,6 +198,7 @@
     "For example, if the roots are 1.3 and 2.2, say ROOTS = [1.3, 2.2].\n",
     "Make sure to use real numbers, not fractions.\n",
     "{{/user}}\n",
+    "\n",
     "{{#assistant~}}\n",
     "{{gen 'answer' temperature=0 max_tokens=300}}\n",
     "{{~/assistant~}}''')"
@@ -226,6 +231,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -253,6 +259,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -294,10 +301,11 @@
     }
    ],
    "source": [
-    "answer_gpt = find_roots_gpt(equation=equation, silent=False)"
+    "answer_gpt = find_roots_gpt(equation=equation)"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -348,7 +356,7 @@
     }
    ],
    "source": [
-    "answer_vicuna = find_roots_vicuna(equation=equation,silent=False)\n"
+    "answer_vicuna = find_roots_vicuna(equation=equation)\n"
    ]
   },
   {
@@ -637,9 +645,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "find_solution = guidance('''{{#system~}}\n",
+    "find_solution = guidance('''\n",
+    "{{#system~}}\n",
     "{{system_prompt}}\n",
     "{{~/system}}\n",
+    "\n",
     "{{#user~}}\n",
     "Please find the solution to the following equation: {{equation}}\n",
     "Think step by step, find the solution, and then say:\n",
@@ -647,6 +657,7 @@
     "For example, if the solution is x=2, say SOLUTION = [3].\n",
     "Make sure to use real numbers, not fractions.\n",
     "{{/user}}\n",
+    "\n",
     "{{#assistant~}}\n",
     "{{gen 'answer' temperature=0 max_tokens=300}}\n",
     "{{~/assistant~}}''')"
@@ -988,6 +999,7 @@
     "qa_attempt1 = guidance('''{{#system~}}\n",
     "{{system_prompt}}\n",
     "{{~/system}}\n",
+    "\n",
     "{{#user~}}\n",
     "You will read a meeting transcript, then extract the relevant segments to answer the following question:\n",
     "Question: {{query}}\n",
@@ -999,6 +1011,7 @@
     "Question: {{query}}\n",
     "Extract from the transcript the most relevant segments for the answer, and then answer the question.\n",
     "{{/user}}\n",
+    "\n",
     "{{#assistant~}}\n",
     "{{gen 'answer' temperature=0}}\n",
     "{{~/assistant~}}''')\n",
@@ -1369,6 +1382,7 @@
     "qa_guided = guidance('''{{#system~}}\n",
     "{{system_prompt}}\n",
     "{{~/system}}\n",
+    "\n",
     "{{#user~}}\n",
     "You will read a meeting transcript, then extract the relevant segments to answer the following question:\n",
     "Question: {{query}}\n",
@@ -1390,6 +1404,7 @@
     "Segment 3: Blank\n",
     "ANSWER: Peter and John discussed the weather and Peter insulted John.\n",
     "{{/user}}\n",
+    "\n",
     "{{#assistant~}}\n",
     "CONVERSATION SEGMENTS:\n",
     "Segment 1: {{gen 'segment1' temperature=0}}\n",
@@ -1481,6 +1496,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1782,6 +1798,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -2008,6 +2025,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -2420,6 +2438,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -2935,6 +2954,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -2943,6 +2963,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -2965,7 +2986,7 @@
     "\n",
     "Now, it may be that these findings don't generalize, and are instead specific to the tasks and inputs we tried (or to the kinds of prompts we tend to write).   \n",
     "That may very well be true, but we think that anyone who tries to use LLMs for real-world tasks will have to go through a similar process to figure out which LLM makes more sense for their use case / preferred prompt style.  \n",
-    "(This is of course not including considerations considerations of cost, privacy, model versioning, etc)\n",
+    "(This is of course not including considerations of cost, privacy, model versioning, etc)\n",
     "\n",
     "In summary, our assessment is that MPT is not ready for real-world use yet (unless we're using it wrong), and that Vicuna is a viable alternative to ChatGPT (3.5) for many tasks (in part due to the ability to specify the output structure, since ChatGPT seems to still have stronger on-task performance).  \n",
     "We should acknowledge that we are biased by having used OpenAI models a lot in the past few years, having written various papers that depend on GPT-3 (e.g. [here](https://aclanthology.org/2022.acl-long.230.pdf), [here](https://arxiv.org/pdf/2303.09014.pdf)), and a big [paper](https://arxiv.org/pdf/2303.12712.pdf) that is basically saying \"GPT-4 is awesome, here are a bunch of cool examples\".  \n",
@@ -2973,6 +2994,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": []
