some changes to blog, but not all

--- a/notebooks/chatgpt_vs_open_source_on_harder_tasks.ipynb
+++ b/notebooks/chatgpt_vs_open_source_on_harder_tasks.ipynb
@@ -1,11 +1,10 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Disclaimer**: this post was written jointly by Marco Tulio Ribeiro and Scott Lundberg. It strictly represents our personal opinions, and not those of our employer (Microsoft)."
+    "This post was written jointly by Marco Tulio Ribeiro and Scott Lundberg"
    ]
   },
   {
@@ -15,7 +14,7 @@
    "source": [
     "## Introduction\n",
     "Open-source LLMs like [Vicuna](https://lmsys.org/blog/2023-03-30-vicuna/) and [MPT](https://www.mosaicml.com/blog/mpt-7b#building-with-mosaicml-platform) are popping up all over the place.  \n",
-    "There's been [discussion](https://www.mosaicml.com/blog/mpt-7b#building-with-mosaicml-platform) about how these models compare to commercial LLMs like ChatGPT or Bard, but most of the comparison has been around answers to simple questions.  \n",
+    "There's been [discussion](https://www.semianalysis.com/p/google-we-have-no-moat-and-neither) about how these models compare to commercial LLMs like ChatGPT or Bard, but most of the comparison has been around answers to simple questions.  \n",
     "\n",
     "As an example, the folks at [LMSYSOrg](https://lmsys.org/) did [an interesting analysis](https://lmsys.org/blog/2023-03-30-vicuna/) (+1 for being automated and reproducible) comparing Vicuna-13B to ChatGPT on various short questions, which is great as a comparison of the models as simple chatbots. However, many interesting ways of using these LLMs typically require complex instructions and/or multi-turn conversations, and some prompt engineering.\n",
     "We think that in the 'real world', most people will want to compare different LLM offerings on _their_ problem, with a variety of different prompts.  \n",
@@ -32,6 +31,13 @@
     "By way of warmup, let's start with a toy task (solving simple polynomial equations), where we can check the output for correctness and shouldn't need much prompt engineering.  \n",
     "This will be similar to the Math category in [here](https://lmsys.org/blog/2023-03-30-vicuna/), with the difference that we will evaluate models as correct / incorrect on ground truth, rather than using GPT-4 to rate the output."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "attachments": {},
@@ -187,7 +193,7 @@
    "outputs": [],
    "source": [
     "find_roots = guidance('''\n",
-    "{{#system~}}\n",
+    "{{~#system~}}\n",
     "{{system_prompt}}\n",
     "{{~/system}}\n",
     "\n",
@@ -200,7 +206,7 @@
     "{{/user}}\n",
     "\n",
     "{{#assistant~}}\n",
-    "{{gen 'answer' temperature=0 max_tokens=300}}\n",
+    "{{gen 'answer' temperature=0}}\n",
     "{{~/assistant~}}''')"
    ]
   },
@@ -2581,7 +2587,7 @@
    "source": [
     "Vicuna is also able to solve the task. Besides privacy (we're not sending the session transcript to OpenAI), Vicuna has a significant advantage: the whole prompt is a single LLM run (and we even [accelerate](https://github.com/microsoft/guidance#guidance-acceleration-notebook) it by not having it geneate the output structure tokens like `COMMAND:`).   \n",
     "\n",
-    "In contrast, we have to make a new call to ChatGPT for each command, which is slower and more expensive (and who knows if they cache the model state between calls).\n",
+    "In contrast, we have to make a new call to ChatGPT for each command, which is slower and more expensive.\n",
     "\n",
     "Let's see how MPT does:"
    ]
@@ -2980,7 +2986,7 @@
     "Here is a summary of our findings:\n",
     "- **Quality on task**: For _every_ task we tried, **ChatGPT is still stronger** than Vicuna on the task itself. MPT performed poorly on almost all tasks (perhaps we are using it wrong?), while Vicuna was often close to ChatGPT (but always slightly worse, on average).\n",
     "- **Ease of use**: It is much more painful to get ChatGPT to follow a specified output format, and thus it is harder to use it inside a program (without a human in the loop). Further, we always have to write regex parsers for the output (as opposed to Vicuna, where parsing a prompt with [clear syntax](https://towardsdatascience.com/the-art-of-prompt-design-use-clear-syntax-4fc846c1ebd5) is trivial).  \n",
-    "We are typically able to solve the structure problem adding more few-shot examples, but it is tedious to write them, and sometimes ChatGPT sometimes goes off-script anyway (we also end up with prompts that are longer, clumsier, and _uglier_).  \n",
+    "We are typically able to solve the structure problem adding more few-shot examples, but it is tedious to write them, and sometimes ChatGPT goes off-script anyway (we also end up with prompts that are longer, clumsier, and _uglier_).  \n",
     "**Being able to specify the output structure is a significant benefit of open-source models**, which sometimes make them a better option even if they are a little worse on the task itself. Vicuna is often close enough to ChatGPT, and for easier tasks they may be indistinguishable.\n",
     "- **Efficiency**: having the model locally means we can solve tasks in a single LLM run (`guidance` keeps the LLM state while the program is executing), which is faster and cheaper. This is particularly true when any substeps involve calling other APIs or functions (like search, terminal, etc), which always requires a new call to the OpenAI API. `guidance` also accelerates generation by not having the model generate the output structure tokens, which sometimes makes a big difference.\n",
     "\n",
@@ -2997,7 +3003,9 @@
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "**Disclaimer**: this post was written jointly by Marco Tulio Ribeiro and Scott Lundberg. It strictly represents our personal opinions, and not those of our employer (Microsoft)."
+   ]
   }
  ],
  "metadata": {
